# haxeget

./: Cargo.toml  LICENSE.md  README.md  meta-install.sh
.github/workflows/: release.yml  rust.yml
src/: cache_directory.rs  download.rs  filesystem.rs  github_schema.rs  install_command.rs  list_command.rs  main.rs  rc_command.rs  uninstall_command.rs  update_command.rs  use_command.rs
