[package]
name = "haxeget"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/logo4poop/haxeget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
console = "0.15.7"
flate2 = "1.0.28"
futures = "0.3.29"
futures-util = "0.3.29"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["blocking", "json", "stream"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tar = "0.4.40"
tokio = { version = "1.33.0", features = ["full"] }
