[package]
name = "haxeget"
authors = ["l0go"]
description = "The easier way to install and manage Haxe compiler versions"
version = "0.2.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/l0go/haxeget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
color-eyre = "0.6"
console = "0.15.7"
flate2 = "1.0.28"
futures = "0.3.29"
futures-util = "0.3.29"
indicatif = "0.17.7"
reqwest = { version = "0.11.22", features = ["blocking", "json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tar = "0.4.40"
tokio = { version = "1.33.0", features = ["full"] }
zip = "0.6.6"
